Adding lanyon theme as the base line and customize from there

--- a/articles.html
+++ b/articles.html
@@ -1,8 +1,7 @@
 ---
-layout: default
+layout: page
 title: Articles
 ---
-<h1>Articles</h1>
 
 <ul>
   {% for doc in site.docs %}
@@ -12,3 +11,20 @@ title: Articles
     </li>
   {% endfor %}
 </ul>
+
+<div class="pagination">
+  {% if paginator.next_page %}
+  <a class="pagination-item older" href="{{ paginator.next_page_path | absolute_url }}">Older</a>
+  {% else %}
+  <span class="pagination-item older">Older</span>
+  {% endif %}
+  {% if paginator.previous_page %}
+  {% if paginator.page == 2 %}
+  <a class="pagination-item newer" href="{{ '/' | absolute_url }}">Newer</a>
+  {% else %}
+  <a class="pagination-item newer" href="{{ paginator.previous_page_path | absolute_url }}">Newer</a>
+  {% endif %}
+  {% else %}
+  <span class="pagination-item newer">Newer</span>
+  {% endif %}
+</div>
